# RedTickets

./: .env.example  .gitignore  Dockerfile  README.md  config.yaml  config_static.yaml  docker-compose.yaml  pyproject.toml  settings.py
bot/: __init__.py  business_hours.py  core.py
bot/ui/: modals.py  views.py
utils/: logging_setup.py  messages.py
